[project]
name = "comfyui_fluxmod"
description = "A modulation layer addon for Flux that reduces model size to 8.8B parameters without significant quality loss."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/lodestone-rock/ComfyUI_FluxMod"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "horizon"
DisplayName = "ComfyUI_FluxMod"
Icon = ""
